Issue #23998: PyImport_ReInitLock() now checks for lock allocation error